Bugfixes - print and load
Added padding for footer, no longer possible to have overflowing text from page

Added extra character for roomnamecontrol upon loading csv

--- a/src/styles/gulvvarme/table.css
+++ b/src/styles/gulvvarme/table.css
@@ -28,9 +28,10 @@ td{
 
 .tableDiv-tabell{
   padding-top: 10px;
+  padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 20px;
-  height: 460px;
+  height: 410px;
   width: 100%;
   overflow-y: auto;
 
